--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 		<script src="https://cdn.rawgit.com/alertifyjs/alertify.js/v1.0.10/dist/js/alertify.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.js"></script>
 		<script>jQuery("#myHeader").fitText();</script>
-		<script src="game.js"></script>
+		<script src="game.js?v=201511111226"></script>
 
 		
 	</body>
