--- a/index.html
+++ b/index.html
@@ -270,7 +270,11 @@
 								    	<div class="text-right"><a class="btn btn-warning btn-sm btnNewGame" role="button" id="">Quit</a></div>
 								    </div>
 							    </div>
-							    
+							    <div class="row">
+							    	<div class="col-sm-12 col-md-12 col-lg-12">
+								    	<div class="text-center" id="lblHintWord"></div>
+								    </div>
+							    </div>
 						  </div>
 						</div>
 					</div>
@@ -417,7 +421,7 @@
 		<script src="https://cdn.rawgit.com/alertifyjs/alertify.js/v1.0.10/dist/js/alertify.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.js"></script>
 		<script>jQuery("#myHeader").fitText();</script>
-		<script src="game.js?v=201511111226"></script>
+		<script src="game.js?v=3"></script>
 
 		
 	</body>
