--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				margin-top: 0px;
 			}
 			html { 
-			  /* background: url("http://i.imgur.com/Uwy8J.jpg") no-repeat center center fixed; */
+			  background: url("http://i.imgur.com/Uwy8J.jpg") no-repeat center center fixed; 
 			  -webkit-background-size: cover;
 			  -moz-background-size: cover;
 			  -o-background-size: cover;
@@ -369,8 +369,8 @@
 							<div class="row">
 							    <div class="col-sm-12 col-md-12 col-lg-12">
  	
-							    	<img xsrc="https://media.giphy.com/media/3oz8xRAkBdlBdAdCyQ/giphy.gif" class="img-responsive" id="resultWinGraphic" style="display: none" />
-							    	<img xsrc="https://media.giphy.com/media/3oz8xHr6N7AHGs8MSI/giphy.gif" class="img-responsive" id="resultLoseGraphic" style="display: none" />
+							    	<img src="https://media.giphy.com/media/3oz8xRAkBdlBdAdCyQ/giphy.gif" class="img-responsive" id="resultWinGraphic" style="display: none" />
+							    	<img src="https://media.giphy.com/media/3oz8xHr6N7AHGs8MSI/giphy.gif" class="img-responsive" id="resultLoseGraphic" style="display: none" />
 							    </div>
 							</div>
 					  	</div>
@@ -402,7 +402,6 @@
 		</footer>
 
 		<!-- hidden resources to be loaded for use later -->
-		<!--
 		<div style="display: none"> 
 			<img src="http://i.imgur.com/Uwy8J.jpg" />
 			<img src='https://media.giphy.com/media/3oz8xPjPPvOwrGjip2/giphy.gif' />
@@ -412,14 +411,13 @@
 			<img src="https://media.giphy.com/media/3oz8xHr6N7AHGs8MSI/giphy.gif" />
 			<img src="https://media.giphy.com/media/l3vQY67mcKeLsVPzy/giphy.gif" />
 		</div>
-		-->
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<script src="https://cdn.rawgit.com/alertifyjs/alertify.js/v1.0.10/dist/js/alertify.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.js"></script>
 		<script>jQuery("#myHeader").fitText();</script>
-		<script src="game.js?v=3"></script>
+		<script src="game.js?v=4"></script>
 
 		
 	</body>
