--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@
 			}
 		</style>
 
+		<!--Start of Zendesk Chat Script-->
+		<script type="text/javascript">
+		window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+		d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+		_.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+		$.src="https://v2.zopim.com/?4Nx16WyM5gv9zTdqZHJb1m3dc1yy2665";z.t=+new Date;$.
+		type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+		</script>
+		<!--End of Zendesk Chat Script-->
 	</head>
 
 	<body>
