--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
 										<div class="input-group">
 								    	<input type="text" class="form-control" placeholder="" name="inputWord" id="inputWord">
 										<span class="input-group-btn">
-											<button class="btn btn-default btnUseWord btn-success" type="button" id="">&nbsp;&nbsp;&nbsp;Go&nbsp;&nbsp;&nbsp;</button>
-											<button class="btn btn-default btnSkipWord btn-danger" type="button" title="Give up">>></button>
+											<button class="btn btn-default btnUseWord btn-success" type="button" id="">&nbsp;&nbsp;&nbsp;&nbsp;Go&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
+											<button class="btn btn-default btnSkipWord btn-danger" type="button" title="Give up">Skip</button>
 										</span>
 									    </div>
 								    </div>
