--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			function getCurrentTimestamp() {
 				var d = new Date(); 
-				return d.getFullYear() + "-" + d.getMonth() + "-" + d.getDay();
+				return d.getFullYear() + "-" + d.getMonth() + "-" + d.getDate();
 			}
 
 			if (getParameterByName("r") == undefined || getParameterByName('r') != getCurrentTimestamp()) {
